@@ -1,19 +1,36 @@
+/*
+ * Copyright 2017-2025 OpenAIRE AMKE & Athena Research and Innovation Center
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *      https://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
 package gr.uoa.di.madgik.resourcecatalogue.service.search;
 
 import gr.uoa.di.madgik.registry.domain.FacetFilter;
 import gr.uoa.di.madgik.registry.elasticsearch.service.ElasticSearchService;
 import gr.uoa.di.madgik.registry.service.SearchService;
-import gr.uoa.di.madgik.resourcecatalogue.utils.FacetFilterUtils;
 import org.elasticsearch.client.RestHighLevelClient;
 import org.elasticsearch.index.query.BoolQueryBuilder;
 import org.elasticsearch.index.query.DisMaxQueryBuilder;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 import static org.elasticsearch.index.query.QueryBuilders.*;
 
 public abstract class AbstractSearchService extends ElasticSearchService implements SearchService {
+
+    public static final String SEARCH_FIELDS = "searchFields";
+    public static final String SEARCHABLE_AREA = "searchableArea";
 
     public AbstractSearchService(RestHighLevelClient client) {
         super(client);
@@ -34,21 +51,21 @@ public abstract class AbstractSearchService extends ElasticSearchService impleme
         BoolQueryBuilder qBuilder = new BoolQueryBuilder();
 
         // retrieve filters from FacetFilter object
-        Map<String, List<Object>> allFilters = FacetFilterUtils.getFacetFilterFilters(filter);
+        Map<String, List<Object>> allFilters = filter.getFilterLists();
 
-        List<Object> searchFields = allFilters.remove(FacetFilterUtils.SEARCH_FIELDS);
+        List<Object> searchFields = allFilters.remove(SEARCH_FIELDS);
         if (searchFields == null || searchFields.isEmpty()) {
             searchFields = Arrays.asList("resource_internal_id", "name", "title");
             // TODO: enable when searchable_area is configurable
-            // searchFields = Collections.singletonList(FacetFilterUtils.SEARCHABLE_AREA);
+            // searchFields = Collections.singletonList(SEARCHABLE_AREA);
         }
 
-        if (filter.getKeyword() != null && !filter.getKeyword().equals("")) {
+        if (filter.getKeyword() != null && !filter.getKeyword().isEmpty()) {
             String keyword = filter.getKeyword();
             List<String> phrases = new ArrayList<>();
 
             // find quoted terms and keep them as is
-            List<String> parts = Arrays.stream(keyword.split("\"")).collect(Collectors.toList());
+            List<String> parts = Arrays.stream(keyword.split("\"")).toList();
             if (parts.size() > 1 && parts.size() % 2 == 1) {
                 for (int i = 0; i < parts.size(); i++) {
                     if (i % 2 == 1) {
