@@ -1,32 +1,51 @@
+/*
+ * Copyright 2017-2025 OpenAIRE AMKE & Athena Research and Innovation Center
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *      https://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
 package gr.uoa.di.madgik.resourcecatalogue.manager;
 
-import gr.uoa.di.madgik.registry.domain.Browsing;
-import gr.uoa.di.madgik.registry.domain.FacetFilter;
-import gr.uoa.di.madgik.registry.domain.Paging;
-import gr.uoa.di.madgik.registry.domain.Resource;
+import gr.uoa.di.madgik.catalogue.exception.ValidationException;
+import gr.uoa.di.madgik.registry.domain.*;
+import gr.uoa.di.madgik.registry.exception.ResourceException;
+import gr.uoa.di.madgik.registry.exception.ResourceNotFoundException;
+import gr.uoa.di.madgik.registry.service.SearchService;
 import gr.uoa.di.madgik.registry.service.ServiceException;
 import gr.uoa.di.madgik.resourcecatalogue.domain.*;
-import gr.uoa.di.madgik.resourcecatalogue.exception.ResourceException;
-import gr.uoa.di.madgik.resourcecatalogue.exception.ResourceNotFoundException;
-import gr.uoa.di.madgik.resourcecatalogue.exception.ValidationException;
 import gr.uoa.di.madgik.resourcecatalogue.service.*;
-import gr.uoa.di.madgik.resourcecatalogue.utils.Auditable;
-import gr.uoa.di.madgik.resourcecatalogue.utils.ObjectUtils;
-import gr.uoa.di.madgik.resourcecatalogue.utils.ProviderResourcesCommonMethods;
+import gr.uoa.di.madgik.resourcecatalogue.utils.*;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Lazy;
 import org.springframework.http.HttpStatus;
+import org.springframework.security.access.AccessDeniedException;
+import org.springframework.security.authentication.InsufficientAuthenticationException;
 import org.springframework.security.core.Authentication;
+import org.springframework.validation.Validator;
 
-import java.util.ArrayList;
-import java.util.Comparator;
-import java.util.List;
+import java.lang.reflect.Field;
+import java.time.Instant;
+import java.time.ZoneId;
+import java.util.*;
 import java.util.stream.Collectors;
 
+import static java.util.stream.Collectors.toList;
+
 @org.springframework.stereotype.Service
-public class ServiceBundleManager extends AbstractServiceBundleManager<ServiceBundle> implements ServiceBundleService<ServiceBundle> {
+public class ServiceBundleManager extends ResourceManager<ServiceBundle> implements ServiceBundleService<ServiceBundle> {
 
     private static final Logger logger = LoggerFactory.getLogger(ServiceBundleManager.class);
 
@@ -36,16 +55,20 @@ public class ServiceBundleManager extends AbstractServiceBundleManager<ServiceBu
     private final RegistrationMailService registrationMailService;
     private final VocabularyService vocabularyService;
     private final CatalogueService catalogueService;
-    private final PublicServiceManager publicServiceManager;
+    private final PublicServiceService publicServiceManager;
     private final MigrationService migrationService;
     private final DatasourceService datasourceService;
     private final HelpdeskService helpdeskService;
     private final MonitoringService monitoringService;
-    private final PublicHelpdeskManager publicHelpdeskManager;
-    private final PublicMonitoringManager publicMonitoringManager;
-    private final PublicDatasourceManager publicDatasourceManager;
+    private final PublicHelpdeskService publicHelpdeskManager;
+    private final PublicMonitoringService publicMonitoringManager;
+    private final PublicDatasourceService publicDatasourceManager;
     private final ResourceInteroperabilityRecordService resourceInteroperabilityRecordService;
     private final ProviderResourcesCommonMethods commonMethods;
+    private final SynchronizerService<Service> synchronizerService;
+    private final Validator serviceValidator;
+    private final FacetLabelService facetLabelService;
+    private final GenericResourceService genericResourceService;
 
     @Value("${catalogue.id}")
     private String catalogueId;
@@ -55,17 +78,21 @@ public class ServiceBundleManager extends AbstractServiceBundleManager<ServiceBu
                                 @Lazy RegistrationMailService registrationMailService,
                                 @Lazy VocabularyService vocabularyService,
                                 CatalogueService catalogueService,
-                                @Lazy PublicServiceManager publicServiceManager,
+                                @Lazy PublicServiceService publicServiceManager,
                                 @Lazy MigrationService migrationService,
                                 @Lazy DatasourceService datasourceService,
                                 @Lazy HelpdeskService helpdeskService,
                                 @Lazy MonitoringService monitoringService,
-                                @Lazy PublicHelpdeskManager publicHelpdeskManager,
-                                @Lazy PublicMonitoringManager publicMonitoringManager,
-                                @Lazy PublicDatasourceManager publicDatasourceManager,
+                                @Lazy PublicHelpdeskService publicHelpdeskManager,
+                                @Lazy PublicMonitoringService publicMonitoringManager,
+                                @Lazy PublicDatasourceService publicDatasourceManager,
                                 @Lazy ResourceInteroperabilityRecordService
                                         resourceInteroperabilityRecordService,
-                                ProviderResourcesCommonMethods commonMethods) {
+                                ProviderResourcesCommonMethods commonMethods,
+                                SynchronizerService<Service> synchronizerService,
+                                @Qualifier("serviceValidator") Validator serviceValidator,
+                                FacetLabelService facetLabelService,
+                                GenericResourceService genericResourceService) {
         super(ServiceBundle.class);
         this.providerService = providerService; // for providers
         this.idCreator = idCreator;
@@ -83,10 +110,14 @@ public class ServiceBundleManager extends AbstractServiceBundleManager<ServiceBu
         this.publicDatasourceManager = publicDatasourceManager;
         this.resourceInteroperabilityRecordService = resourceInteroperabilityRecordService;
         this.commonMethods = commonMethods;
+        this.synchronizerService = synchronizerService;
+        this.serviceValidator = serviceValidator;
+        this.facetLabelService = facetLabelService;
+        this.genericResourceService = genericResourceService;
     }
 
     @Override
-    public String getResourceType() {
+    public String getResourceTypeName() {
         return "service";
     }
 
@@ -97,7 +128,7 @@ public class ServiceBundleManager extends AbstractServiceBundleManager<ServiceBu
 
     @Override
     public ServiceBundle addResource(ServiceBundle serviceBundle, String catalogueId, Authentication auth) {
-        if (catalogueId == null || catalogueId.equals("")) { // add catalogue provider
+        if (catalogueId == null || catalogueId.isEmpty()) { // add catalogue provider
             serviceBundle.getService().setCatalogueId(this.catalogueId);
         } else { // add provider from external catalogue
             commonMethods.checkCatalogueIdConsistency(serviceBundle, catalogueId);
@@ -106,23 +137,29 @@ public class ServiceBundleManager extends AbstractServiceBundleManager<ServiceBu
 
         ProviderBundle providerBundle = providerService.get(serviceBundle.getService().getResourceOrganisation(), auth);
         if (providerBundle == null) {
-            throw new ValidationException(String.format("Provider with id '%s' and catalogueId '%s' does not exist", serviceBundle.getService().getResourceOrganisation(), serviceBundle.getService().getCatalogueId()));
+            throw new ResourceNotFoundException(String.format("Provider with id '%s' and catalogueId '%s' does not exist", serviceBundle.getService().getResourceOrganisation(), serviceBundle.getService().getCatalogueId()));
         }
         // check if Provider is approved
         if (!providerBundle.getStatus().equals("approved provider")) {
-            throw new ValidationException(String.format("The Provider '%s' you provided as a Resource Organisation is not yet approved",
-                    serviceBundle.getService().getResourceOrganisation()));
+            throw new ResourceException(String.format("The Provider '%s' you provided as a Resource Organisation is not yet approved",
+                    serviceBundle.getService().getResourceOrganisation()), HttpStatus.CONFLICT);
         }
         // check Provider's templateStatus
         if (providerBundle.getTemplateStatus().equals("pending template")) {
-            throw new ValidationException(String.format("The Provider with id %s has already registered a Resource Template.", providerBundle.getId()));
+            throw new ResourceException(String.format("The Provider with id %s has already registered a Resource " +
+                    "Template.", providerBundle.getId()), HttpStatus.CONFLICT);
+        }
+        // if Resource version is empty set it null
+        if ("".equals(serviceBundle.getService().getVersion())) {
+            serviceBundle.getService().setVersion(null);
         }
 
-        serviceBundle.setId(idCreator.generate(getResourceType()));
+        serviceBundle.setId(idCreator.generate(getResourceTypeName()));
 
         // register and ensure Resource Catalogue's PID uniqueness
-        commonMethods.createPIDAndCorrespondingAlternativeIdentifier(serviceBundle, getResourceType());
+        commonMethods.determineResourceAndCreateAlternativeIdentifierForPID(serviceBundle, getResourceTypeName());
         serviceBundle.getService().setAlternativeIdentifiers(commonMethods.ensureResourceCataloguePidUniqueness(serviceBundle.getId(),
+                serviceBundle.getService().getCatalogueId(),
                 serviceBundle.getService().getAlternativeIdentifiers()));
 
         validate(serviceBundle);
@@ -134,13 +171,13 @@ public class ServiceBundleManager extends AbstractServiceBundleManager<ServiceBu
 
         // create new Metadata if not exists
         if (serviceBundle.getMetadata() == null) {
-            serviceBundle.setMetadata(Metadata.createMetadata(User.of(auth).getFullName()));
+            serviceBundle.setMetadata(Metadata.createMetadata(AuthenticationInfo.getFullName(auth)));
         }
 
         List<LoggingInfo> loggingInfoList = commonMethods.returnLoggingInfoListAndCreateRegistrationInfoIfEmpty(serviceBundle, auth);
 
         // latestOnboardingInfo
-        serviceBundle.setLatestOnboardingInfo(loggingInfoList.get(0));
+        serviceBundle.setLatestOnboardingInfo(loggingInfoList.getFirst());
 
         // resource status & extra loggingInfo for Approval
         if (providerBundle.getTemplateStatus().equals("approved template")) {
@@ -161,7 +198,12 @@ public class ServiceBundleManager extends AbstractServiceBundleManager<ServiceBu
 
         logger.info("Adding Service: {}", serviceBundle);
         ServiceBundle ret;
+
+        prettifyServiceTextFields(serviceBundle, ",");
+
         ret = super.add(serviceBundle, auth);
+
+        synchronizerService.syncAdd(serviceBundle.getPayload());
 
         return ret;
     }
@@ -177,7 +219,7 @@ public class ServiceBundleManager extends AbstractServiceBundleManager<ServiceBu
         ServiceBundle ret = ObjectUtils.clone(serviceBundle);
         ServiceBundle existingService;
         try {
-            existingService = get(ret.getService().getId(), ret.getService().getCatalogueId());
+            existingService = get(ret.getService().getId());
             if (ret.getService().equals(existingService.getService())) {
                 return ret;
             }
@@ -187,14 +229,15 @@ public class ServiceBundleManager extends AbstractServiceBundleManager<ServiceBu
         }
 
 
-        if (catalogueId == null || catalogueId.equals("")) {
+        if (catalogueId == null || catalogueId.isEmpty()) {
             ret.getService().setCatalogueId(this.catalogueId);
         } else {
             commonMethods.checkCatalogueIdConsistency(ret, catalogueId);
         }
         commonMethods.checkRelatedResourceIDsConsistency(ret);
 
-        logger.trace("Attempting to update the Service with id '{}' of the Catalogue '{}'", ret.getService().getId(), ret.getService().getCatalogueId());
+        logger.trace("Attempting to update the Service with id '{}' of the Catalogue '{}'",
+                ret.getService().getId(), ret.getService().getCatalogueId());
         validate(ret);
 
         ProviderBundle providerBundle = providerService.get(ret.getService().getResourceOrganisation(), auth);
@@ -206,22 +249,21 @@ public class ServiceBundleManager extends AbstractServiceBundleManager<ServiceBu
 
         // block Public Service update
         if (existingService.getMetadata().isPublished()) {
-            throw new ValidationException("You cannot directly update a Public Service");
+            throw new ResourceException("You cannot directly update a Public Service", HttpStatus.FORBIDDEN);
         }
 
         // ensure Resource Catalogue's PID uniqueness
         if (ret.getService().getAlternativeIdentifiers() == null ||
                 ret.getService().getAlternativeIdentifiers().isEmpty()) {
-            commonMethods.createPIDAndCorrespondingAlternativeIdentifier(ret, getResourceType());
+            commonMethods.determineResourceAndCreateAlternativeIdentifierForPID(ret, getResourceTypeName());
         } else {
             ret.getService().setAlternativeIdentifiers(commonMethods.ensureResourceCataloguePidUniqueness(ret.getId(),
+                    ret.getService().getCatalogueId(),
                     ret.getService().getAlternativeIdentifiers()));
         }
 
-        User user = User.of(auth);
-
         // update existing service Metadata, ResourceExtras, Identifiers, MigrationStatus
-        ret.setMetadata(Metadata.updateMetadata(existingService.getMetadata(), user.getFullName()));
+        ret.setMetadata(Metadata.updateMetadata(existingService.getMetadata(), AuthenticationInfo.getFullName(auth)));
         ret.setResourceExtras(existingService.getResourceExtras());
 //        ret.setIdentifiers(existingService.getIdentifiers());
         ret.setMigrationStatus(existingService.getMigrationStatus());
@@ -266,69 +308,53 @@ public class ServiceBundleManager extends AbstractServiceBundleManager<ServiceBu
         // if a user updates a service with version to a service with null version then while searching for the service
         // you get a "Service already exists" error.
         if (existingService.getService().getVersion() != null && ret.getService().getVersion() == null) {
-            throw new ServiceException("You cannot update a Service registered with version to a Service with null version");
+            throw new ResourceException("You cannot update a Service registered with version to a Service with null version",
+                    HttpStatus.CONFLICT);
         }
 
         // block catalogueId updates from Provider Admins
         if (!securityService.hasRole(auth, "ROLE_ADMIN")) {
             if (!existingService.getService().getCatalogueId().equals(ret.getService().getCatalogueId())) {
-                throw new ValidationException("You cannot change catalogueId");
+                throw new ResourceException("You cannot change catalogueId", HttpStatus.FORBIDDEN);
             }
         }
+
+        prettifyServiceTextFields(serviceBundle, ",");
 
         ret = super.update(ret, auth);
         logger.info("Updating Service: {}", ret);
 
         // send notification emails to Portal Admins
         if (ret.getLatestAuditInfo() != null && ret.getLatestUpdateInfo() != null) {
-            Long latestAudit = Long.parseLong(ret.getLatestAuditInfo().getDate());
-            Long latestUpdate = Long.parseLong(ret.getLatestUpdateInfo().getDate());
+            long latestAudit = Long.parseLong(ret.getLatestAuditInfo().getDate());
+            long latestUpdate = Long.parseLong(ret.getLatestUpdateInfo().getDate());
             if (latestAudit < latestUpdate && ret.getLatestAuditInfo().getActionType().equals(LoggingInfo.ActionType.INVALID.getKey())) {
-                registrationMailService.notifyPortalAdminsForInvalidResourceUpdate(ret);
+                registrationMailService.notifyPortalAdminsForInvalidServiceUpdate(ret);
             }
         }
+
+        synchronizerService.syncUpdate(serviceBundle.getPayload());
 
         return ret;
     }
 
-    public ServiceBundle getCatalogueResource(String catalogueId, String serviceId, Authentication auth) {
-        ServiceBundle serviceBundle = get(serviceId, catalogueId);
-        CatalogueBundle catalogueBundle = catalogueService.get(catalogueId);
-        if (serviceBundle == null) {
-            throw new ResourceNotFoundException(
-                    String.format("Could not find Service with id: %s", serviceId));
-        }
-        if (catalogueBundle == null) {
-            throw new ResourceNotFoundException(
-                    String.format("Could not find Catalogue with id: %s", catalogueId));
-        }
-        if (!serviceBundle.getService().getCatalogueId().equals(catalogueId)) {
-            throw new ValidationException(String.format("Service with id [%s] does not belong to the catalogue with id [%s]", serviceId, catalogueId));
-        }
-        if (auth != null && auth.isAuthenticated()) {
-            User user = User.of(auth);
-            //TODO: userIsCatalogueAdmin -> transactionRollback error
-            // if user is ADMIN/EPOT or Catalogue/Provider Admin on the specific Provider, return everything
-            if (securityService.hasRole(auth, "ROLE_ADMIN") || securityService.hasRole(auth, "ROLE_EPOT") ||
-                    securityService.userIsResourceProviderAdmin(user, serviceId, catalogueId)) {
-                return serviceBundle;
-            }
-        }
-        // else return the Service ONLY if it is active
-        if (serviceBundle.getStatus().equals(vocabularyService.get("approved resource").getId())) {
-            return serviceBundle;
-        }
-        throw new ValidationException("You cannot view the specific Service");
+    @Override
+    public void delete(ServiceBundle serviceBundle) {
+        String catalogue = serviceBundle.getService().getCatalogueId();
+        commonMethods.blockResourceDeletion(serviceBundle.getStatus(), serviceBundle.getMetadata().isPublished());
+        commonMethods.deleteResourceRelatedServiceSubprofiles(serviceBundle.getId(), catalogue);
+        commonMethods.deleteResourceRelatedServiceExtensionsAndResourceInteroperabilityRecords(serviceBundle.getId(), catalogue, "Service");
+        logger.info("Deleting Service: {}", serviceBundle);
+        super.delete(serviceBundle);
+        synchronizerService.syncDelete(serviceBundle.getPayload());
     }
 
     @Override
-    public void delete(ServiceBundle serviceBundle) {
-        String catalogueId = serviceBundle.getService().getCatalogueId();
-        commonMethods.blockResourceDeletion(serviceBundle.getStatus(), serviceBundle.getMetadata().isPublished());
-        commonMethods.deleteResourceRelatedServiceSubprofiles(serviceBundle.getId(), catalogueId);
-        commonMethods.deleteResourceRelatedServiceExtensionsAndResourceInteroperabilityRecords(serviceBundle.getId(), catalogueId, "Service");
-        logger.info("Deleting Service: {}", serviceBundle);
-        super.delete(serviceBundle);
+    public ServiceBundle validate(ServiceBundle serviceBundle) {
+        logger.debug("Validating Service with id: '{}'", serviceBundle.getId());
+        serviceValidator.validate(serviceBundle, null);
+
+        return super.validate(serviceBundle);
     }
 
     public ServiceBundle verify(String id, String status, Boolean active, Authentication auth) {
@@ -336,8 +362,8 @@ public class ServiceBundleManager extends AbstractServiceBundleManager<ServiceBu
         if (!statusVocabulary.getType().equals("Resource state")) {
             throw new ValidationException(String.format("Vocabulary %s does not consist a Resource State!", status));
         }
-        logger.trace("verifyResource with id: '{}' | status -> '{}' | active -> '{}'", id, status, active);
-        ServiceBundle serviceBundle = getCatalogueResource(catalogueId, id, auth);
+        logger.trace("verifyResource with id: '{}' | status: '{}' | active: '{}'", id, status, active);
+        ServiceBundle serviceBundle = get(id);
         serviceBundle.setStatus(vocabularyService.get(status).getId());
         ProviderBundle resourceProvider = providerService.get(serviceBundle.getService().getResourceOrganisation(), auth);
         List<LoggingInfo> loggingInfoList = commonMethods.returnLoggingInfoListAndCreateRegistrationInfoIfEmpty(serviceBundle, auth);
@@ -393,7 +419,7 @@ public class ServiceBundleManager extends AbstractServiceBundleManager<ServiceBu
     public ServiceBundle publish(String serviceId, Boolean active, Authentication auth) {
         ServiceBundle service;
         String activeProvider = "";
-        service = this.get(serviceId, catalogueId);
+        service = this.get(serviceId);
 
         if ((service.getStatus().equals(vocabularyService.get("pending resource").getId()) ||
                 service.getStatus().equals(vocabularyService.get("rejected resource").getId())) && !service.isActive()) {
@@ -404,7 +430,7 @@ public class ServiceBundleManager extends AbstractServiceBundleManager<ServiceBu
         if (providerBundle.getStatus().equals("approved provider") && providerBundle.isActive()) {
             activeProvider = service.getService().getResourceOrganisation();
         }
-        if (active && activeProvider.equals("")) {
+        if (active && activeProvider.isEmpty()) {
             throw new ResourceException("Service does not have active Providers", HttpStatus.CONFLICT);
         }
         service.setActive(active);
@@ -430,9 +456,9 @@ public class ServiceBundleManager extends AbstractServiceBundleManager<ServiceBu
         MonitoringBundle monitoringBundle = monitoringService.get(serviceId, catalogueId);
         DatasourceBundle datasourceBundle = datasourceService.get(serviceId, catalogueId);
         if (active) {
-            logger.info("Activating all related resources of the Service with id: {}", serviceId);
+            logger.info("Activating all related resources of the Service with id: '{}'", serviceId);
         } else {
-            logger.info("Deactivating all related resources of the Service with id: {}", serviceId);
+            logger.info("Deactivating all related resources of the Service with id: '{}'", serviceId);
         }
         if (helpdeskBundle != null) {
             publishServiceExtensionsAndSubprofiles(helpdeskBundle, active, auth);
@@ -450,7 +476,7 @@ public class ServiceBundleManager extends AbstractServiceBundleManager<ServiceBu
 
         // update Bundle's fields
         bundle.setLoggingInfo(loggingInfoList);
-        bundle.setLatestUpdateInfo(loggingInfoList.get(loggingInfoList.size() - 1));
+        bundle.setLatestUpdateInfo(loggingInfoList.getLast());
         bundle.setActive(active);
 
         if (bundle instanceof HelpdeskBundle) {
@@ -460,8 +486,8 @@ public class ServiceBundleManager extends AbstractServiceBundleManager<ServiceBu
                         ((HelpdeskBundle) bundle).getCatalogueId(), bundle.isActive());
                 helpdeskService.updateBundle((HelpdeskBundle) bundle, auth);
                 HelpdeskBundle publicHelpdeskBundle =
-                        publicHelpdeskManager.getOrElseReturnNull(((HelpdeskBundle) bundle).getCatalogueId() +
-                                "." + bundle.getId());
+                        publicHelpdeskManager.getOrElseReturnNull(PublicResourceUtils.createPublicResourceId(
+                                bundle.getId(), ((HelpdeskBundle) bundle).getCatalogueId()));
                 if (publicHelpdeskBundle != null) {
                     publicHelpdeskManager.update((HelpdeskBundle) bundle, auth);
                 }
@@ -477,8 +503,8 @@ public class ServiceBundleManager extends AbstractServiceBundleManager<ServiceBu
                         ((MonitoringBundle) bundle).getCatalogueId(), bundle.isActive());
                 monitoringService.updateBundle((MonitoringBundle) bundle, auth);
                 MonitoringBundle publicMonitoringBundle =
-                        publicMonitoringManager.getOrElseReturnNull(((MonitoringBundle) bundle).getCatalogueId() +
-                                "." + bundle.getId());
+                        publicMonitoringManager.getOrElseReturnNull(PublicResourceUtils.createPublicResourceId(
+                                bundle.getId(), ((MonitoringBundle) bundle).getCatalogueId()));
                 if (publicMonitoringBundle != null) {
                     publicMonitoringManager.update((MonitoringBundle) bundle, auth);
                 }
@@ -494,8 +520,8 @@ public class ServiceBundleManager extends AbstractServiceBundleManager<ServiceBu
                         ((DatasourceBundle) bundle).getDatasource().getCatalogueId(), bundle.isActive());
                 datasourceService.updateBundle((DatasourceBundle) bundle, auth);
                 DatasourceBundle publicDatasourceBundle =
-                        publicDatasourceManager.getOrElseReturnNull(((DatasourceBundle) bundle).getDatasource().getCatalogueId()
-                                + "." + bundle.getId());
+                        publicDatasourceManager.getOrElseReturnNull(PublicResourceUtils.createPublicResourceId(
+                                bundle.getId(), ((DatasourceBundle) bundle).getDatasource().getCatalogueId()));
                 if (publicDatasourceBundle != null) {
                     publicDatasourceManager.update((DatasourceBundle) bundle, auth);
                 }
@@ -520,11 +546,10 @@ public class ServiceBundleManager extends AbstractServiceBundleManager<ServiceBu
         }
 
         // send notification emails to Provider Admins
-        registrationMailService.notifyProviderAdminsForBundleAuditing(service, "Service",
-                service.getService().getName(), provider.getProvider().getUsers());
+        registrationMailService.notifyProviderAdminsForBundleAuditing(service, provider.getProvider().getUsers());
 
         logger.info("User '{}-{}' audited Service '{}'-'{}' with [actionType: {}]",
-                User.of(auth).getFullName(), User.of(auth).getEmail(),
+                AuthenticationInfo.getFullName(auth), AuthenticationInfo.getEmail(auth).toLowerCase(),
                 service.getService().getId(), service.getService().getName(), actionType);
         return super.update(service, auth);
     }
@@ -561,7 +586,7 @@ public class ServiceBundleManager extends AbstractServiceBundleManager<ServiceBu
             User user = User.of(auth);
             // if user is ADMIN/EPOT or Provider Admin on the specific Provider, return its Services
             if (securityService.hasRole(auth, "ROLE_ADMIN") || securityService.hasRole(auth, "ROLE_EPOT") ||
-                    securityService.userIsProviderAdmin(user, providerBundle)) {
+                    securityService.userHasAdminAccess(user, providerId)) {
                 return this.getAll(ff, auth).getResults().stream().map(ServiceBundle::getService).collect(Collectors.toList());
             }
         }
@@ -569,11 +594,11 @@ public class ServiceBundleManager extends AbstractServiceBundleManager<ServiceBu
         if (providerBundle.getStatus().equals(vocabularyService.get("approved provider").getId())) {
             return this.getAll(ff, null).getResults().stream().map(ServiceBundle::getService).collect(Collectors.toList());
         }
-        throw new ValidationException("You cannot view the Services of the specific Provider");
+        throw new InsufficientAuthenticationException("You cannot view the Services of the specific Provider");
     }
 
     // for sendProviderMails on RegistrationMailService AND StatisticsManager
-    public List<Service> getResources(String providerId) {
+    public List<Service> getResourcesByProvider(String providerId) {
         FacetFilter ff = new FacetFilter();
         ff.addFilter("resource_organisation", providerId);
         ff.addFilter("catalogue_id", catalogueId);
@@ -583,33 +608,11 @@ public class ServiceBundleManager extends AbstractServiceBundleManager<ServiceBu
         return this.getAll(ff, securityService.getAdminAccess()).getResults().stream().map(ServiceBundle::getService).collect(Collectors.toList());
     }
 
-    //    @Override
-    public Paging<LoggingInfo> getLoggingInfoHistory(String id, String catalogueId) {
-        ServiceBundle serviceBundle;
-        try {
-            serviceBundle = get(id, catalogueId);
-            List<Resource> allResources = getResources(serviceBundle.getService().getId(), serviceBundle.getService().getCatalogueId()); // get all versions of a specific Service
-            allResources.sort(Comparator.comparing((Resource::getCreationDate)));
-            List<LoggingInfo> loggingInfoList = new ArrayList<>();
-            for (Resource resource : allResources) {
-                ServiceBundle service = deserialize(resource);
-                if (service.getLoggingInfo() != null) {
-                    loggingInfoList.addAll(service.getLoggingInfo());
-                }
-            }
-            loggingInfoList.sort(Comparator.comparing(LoggingInfo::getDate).reversed());
-            return new Browsing<>(loggingInfoList.size(), 0, loggingInfoList.size(), loggingInfoList, null);
-        } catch (ResourceNotFoundException e) {
-            logger.info(String.format("Service with id [%s] not found", id));
-        }
-        return null;
-    }
-
     public void sendEmailNotificationsToProvidersWithOutdatedResources(String resourceId, Authentication auth) {
-        String providerId = providerService.get(get(resourceId).getService().getResourceOrganisation()).getId();
-        String providerName = providerService.get(get(resourceId).getService().getResourceOrganisation()).getProvider().getName();
-        logger.info(String.format("Mailing provider [%s]-[%s] for outdated Resources", providerId, providerName));
-        registrationMailService.sendEmailNotificationsToProvidersWithOutdatedResources(resourceId);
+        ServiceBundle serviceBundle = get(resourceId);
+        ProviderBundle providerBundle = providerService.get(serviceBundle.getService().getResourceOrganisation());
+        logger.info("Mailing provider '{}'-'{}' for outdated Resources", providerBundle.getId(), providerBundle.getProvider().getName());
+        registrationMailService.sendEmailNotificationsToProviderAdminsWithOutdatedResources(serviceBundle, providerBundle);
     }
 
     public ServiceBundle changeProvider(String resourceId, String newProviderId, String comment, Authentication auth) {
@@ -627,12 +630,10 @@ public class ServiceBundleManager extends AbstractServiceBundleManager<ServiceBu
             throw new ValidationException("You cannot move a Service to a Provider of another Catalogue");
         }
 
-        User user = User.of(auth);
-
         // update loggingInfo
         List<LoggingInfo> loggingInfoList = serviceBundle.getLoggingInfo();
         LoggingInfo loggingInfo;
-        if (comment == null || "".equals(comment)) {
+        if (comment == null || comment.isEmpty()) {
             loggingInfo = commonMethods.createLoggingInfo(auth, LoggingInfo.Types.MOVE.getKey(),
                     LoggingInfo.ActionType.MOVED.getKey());
         } else {
@@ -648,7 +649,7 @@ public class ServiceBundleManager extends AbstractServiceBundleManager<ServiceBu
         // update metadata
         Metadata metadata = serviceBundle.getMetadata();
         metadata.setModifiedAt(String.valueOf(System.currentTimeMillis()));
-        metadata.setModifiedBy(user.getFullName());
+        metadata.setModifiedBy(AuthenticationInfo.getFullName(auth));
         metadata.setTerms(null);
         serviceBundle.setMetadata(metadata);
 
@@ -664,8 +665,8 @@ public class ServiceBundleManager extends AbstractServiceBundleManager<ServiceBu
 
         // add Resource, delete the old one
         add(serviceBundle, auth);
-        publicServiceManager.delete(get(resourceId, catalogueId)); // FIXME: ProviderManagementAspect's deletePublicDatasource is not triggered
-        delete(get(resourceId, catalogueId));
+        publicServiceManager.delete(get(resourceId)); // FIXME: ProviderManagementAspect's deletePublicDatasource is not triggered
+        delete(get(resourceId));
 
         // update other resources which had the old resource ID on their fields
         migrationService.updateRelatedToTheIdFieldsOfOtherResourcesOfThePortal(resourceId, resourceId); //TODO: SEE IF IT WORKS AS INTENDED AND REMOVE
@@ -727,5 +728,282 @@ public class ServiceBundleManager extends AbstractServiceBundleManager<ServiceBu
             }
         }
         return super.update(serviceBundle, auth);
+    }
+
+    @Override
+    public Browsing<ServiceBundle> getAll(FacetFilter filter, Authentication auth) {
+        updateFacetFilterConsideringTheAuthorization(filter, auth);
+        filter.setBrowseBy(this.getBrowseBy());
+        filter.setResourceType(getResourceTypeName());
+
+        Browsing<ServiceBundle> resources;
+        resources = genericResourceService.getResults(filter);
+        if (!resources.getResults().isEmpty() && !resources.getFacets().isEmpty()) {
+            resources.setFacets(facetLabelService.generateLabels(resources.getFacets()));
+        }
+
+        return resources;
+    }
+
+    @Override
+    public Browsing<ServiceBundle> getMy(FacetFilter filter, Authentication auth) {
+        FacetFilter ff = new FacetFilter();
+        ff.setQuantity(maxQuantity);
+        List<ProviderBundle> providers = providerService.getMy(ff, auth).getResults();
+        if (providers.isEmpty()) {
+            return new Browsing<>();
+        }
+
+        if (filter == null) {
+            filter = new FacetFilter();
+            filter.setQuantity(maxQuantity);
+        }
+        filter.addFilter("resource_organisation", providers.stream().map(ProviderBundle::getId).toList());
+        filter.setResourceType(getResourceTypeName());
+        return this.getAll(filter, auth);
+    }
+
+    @Override
+    public Map<String, List<ServiceBundle>> getBy(String field, Authentication auth) throws NoSuchFieldException {
+        Field serviceField = null;
+        try {
+            serviceField = Service.class.getDeclaredField(field);
+        } catch (NoSuchFieldException e) {
+            logger.warn("Attempt to find field '{}' in Service failed. Trying in ServiceBundle...", field);
+            serviceField = ServiceBundle.class.getDeclaredField(field);
+        }
+        serviceField.setAccessible(true);
+
+        FacetFilter ff = new FacetFilter();
+        ff.setQuantity(maxQuantity);
+        ff.addFilter("published", false);
+        Browsing<ServiceBundle> services = getAll(ff, auth);
+
+        final Field f = serviceField;
+        final String undef = "undefined";
+        return services.getResults().stream().collect(Collectors.groupingBy(service -> {
+            try {
+                return f.get(service.getPayload()) != null ? f.get(service.getPayload()).toString() : undef;
+            } catch (IllegalAccessException | IllegalArgumentException e) {
+                logger.warn("Warning", e);
+                try {
+                    return f.get(service) != null ? f.get(service).toString() : undef;
+                } catch (IllegalAccessException e1) {
+                    logger.error("ERROR", e1);
+                }
+                return undef;
+            }
+        }, Collectors.mapping((ServiceBundle service) -> service, toList())));
+    }
+
+    @Override
+    public List<ServiceBundle> getByIds(Authentication auth, String... ids) {
+        List<ServiceBundle> resources;
+        resources = Arrays.stream(ids)
+                .map(id ->
+                {
+                    try {
+                        return get(id);
+                    } catch (ServiceException | ResourceNotFoundException e) {
+                        return null;
+                    }
+
+                })
+                .filter(Objects::nonNull)
+                .toList();
+        return resources;
+    }
+
+    @Override
+    public boolean exists(SearchService.KeyValue... ids) {
+        Resource resource;
+        resource = this.searchService.searchFields(getResourceTypeName(), ids);
+        return resource != null;
+    }
+
+    @Override
+    public Bundle<?> getResourceTemplate(String providerId, Authentication auth) {
+        FacetFilter ff = new FacetFilter();
+        ff.addFilter("resource_organisation", providerId);
+        ff.addFilter("catalogue_id", catalogueId);
+        List<ServiceBundle> allProviderResources = getAll(ff, auth).getResults();
+        for (ServiceBundle resourceBundle : allProviderResources) {
+            if (resourceBundle.getStatus().equals(vocabularyService.get("pending resource").getId())) {
+                return resourceBundle;
+            }
+        }
+        return null;
+    }
+
+    @Override
+    protected Browsing<ServiceBundle> getResults(FacetFilter filter) {
+        Browsing<ServiceBundle> browsing;
+        filter.setResourceType(getResourceTypeName());
+        browsing = super.getResults(filter);
+
+        browsing.setFacets(createCorrectFacets(browsing.getFacets(), filter));
+        return browsing;
+    }
+
+    public List<Facet> createCorrectFacets(List<Facet> serviceFacets, FacetFilter ff) {
+        ff.setQuantity(0);
+
+        Map<String, List<Object>> allFilters = ff.getFilterLists();
+
+        List<String> reverseOrderedKeys = new LinkedList<>(allFilters.keySet());
+        Collections.reverse(reverseOrderedKeys);
+
+        for (String filterKey : reverseOrderedKeys) {
+            Map<String, List<Object>> someFilters = new LinkedHashMap<>(allFilters);
+
+            // if last filter is "active" continue to next iteration
+            if ("active".equals(filterKey)) {
+                continue;
+            }
+            someFilters.remove(filterKey);
+
+            FacetFilter facetFilter = FacetFilter.from(someFilters);
+            facetFilter.setResourceType(getResourceTypeName());
+            facetFilter.setBrowseBy(Collections.singletonList(filterKey));
+            List<Facet> facetsCategory = getResults(facetFilter).getFacets(); // CORRECT FACETS ?
+
+            for (Facet facet : serviceFacets) {
+                if (facet.getField().equals(filterKey)) {
+                    for (Facet facetCategory : facetsCategory) {
+                        if (facetCategory.getField().equals(facet.getField())) {
+                            serviceFacets.set(serviceFacets.indexOf(facet), facetCategory);
+                            break;
+                        }
+                    }
+                    break;
+                }
+            }
+            break;
+        }
+
+        return removeEmptyFacets(serviceFacets);
+    }
+
+    private List<Facet> removeEmptyFacets(List<Facet> facetList) {
+        return facetList.stream().filter(facet -> !facet.getValues().isEmpty()).toList();
+    }
+
+    // FIXME: not working...
+    @Override
+    public Paging<ServiceBundle> getRandomResources(FacetFilter ff, String auditingInterval, Authentication auth) {
+        FacetFilter facetFilter = new FacetFilter();
+        facetFilter.setQuantity(maxQuantity);
+        facetFilter.addFilter("status", "approved resource");
+        facetFilter.addFilter("published", false);
+        Browsing<ServiceBundle> serviceBrowsing = getAll(facetFilter, auth);
+        List<ServiceBundle> servicesToBeAudited = new ArrayList<>();
+        long todayEpochTime = System.currentTimeMillis();
+        long interval = Instant.ofEpochMilli(todayEpochTime).atZone(ZoneId.systemDefault()).minusMonths(Integer.parseInt(auditingInterval)).toEpochSecond();
+        for (ServiceBundle serviceBundle : serviceBrowsing.getResults()) {
+            if (serviceBundle.getLatestAuditInfo() != null) {
+                if (Long.parseLong(serviceBundle.getLatestAuditInfo().getDate()) > interval) {
+                    servicesToBeAudited.add(serviceBundle);
+                }
+            }
+        }
+        Collections.shuffle(servicesToBeAudited);
+        if (servicesToBeAudited.size() > ff.getQuantity()) {
+            servicesToBeAudited.subList(ff.getQuantity(), servicesToBeAudited.size()).clear();
+        }
+        return new Browsing<>(servicesToBeAudited.size(), 0, servicesToBeAudited.size(), servicesToBeAudited, serviceBrowsing.getFacets());
+    }
+
+    @Override
+    public ServiceBundle updateEOSCIFGuidelines(String resourceId, String catalogueId, List<EOSCIFGuidelines> eoscIFGuidelines, Authentication auth) {
+        ServiceBundle bundle = get(resourceId);
+        blockUpdateIfResourceIsPublished(bundle);
+        ResourceExtras resourceExtras = bundle.getResourceExtras();
+        if (resourceExtras == null) {
+            ResourceExtras newResourceExtras = new ResourceExtras();
+            List<EOSCIFGuidelines> newEOSCIFGuidelines = new ArrayList<>(eoscIFGuidelines);
+            newResourceExtras.setEoscIFGuidelines(newEOSCIFGuidelines);
+            bundle.setResourceExtras(newResourceExtras);
+        } else {
+            bundle.getResourceExtras().setEoscIFGuidelines(eoscIFGuidelines);
+        }
+        // check PID consistency
+        checkEOSCIFGuidelinesPIDConsistency(bundle);
+
+        createLoggingInfoEntriesForResourceExtraUpdates(bundle, auth);
+        validate(bundle);
+        update(bundle, auth);
+        logger.info("User '{}'-'{}' updated field eoscIFGuidelines of the Resource '{}'",
+                AuthenticationInfo.getFullName(auth), AuthenticationInfo.getEmail(auth).toLowerCase(), resourceId);
+        return bundle;
+    }
+
+    /**
+     * Adds spaces after ',' if they don't already exist and removes spaces before
+     *
+     * @param serviceBundle
+     * @param specialCharacters
+     * @return
+     */
+    protected ServiceBundle prettifyServiceTextFields(ServiceBundle serviceBundle, String specialCharacters) {
+        serviceBundle.getService().setTagline(TextUtils.prettifyText(serviceBundle.getService().getTagline(), specialCharacters));
+        return serviceBundle;
+    }
+
+    private void blockUpdateIfResourceIsPublished(ServiceBundle serviceBundle) { //FIXME: DOES NOT WORK AS INTENDED
+        if (serviceBundle.getMetadata().isPublished()) {
+            throw new AccessDeniedException("You cannot directly update a Public Resource.");
+        }
+    }
+
+    private void checkEOSCIFGuidelinesPIDConsistency(ServiceBundle serviceBundle) {
+        List<String> pidList = new ArrayList<>();
+        for (EOSCIFGuidelines eoscIFGuideline : serviceBundle.getResourceExtras().getEoscIFGuidelines()) {
+            pidList.add(eoscIFGuideline.getPid());
+        }
+        Set<String> pidSet = new HashSet<>(pidList);
+        if (pidSet.size() < pidList.size()) {
+            throw new ValidationException("EOSCIFGuidelines cannot have duplicate PIDs.");
+        }
+    }
+
+    public ServiceBundle getOrElseReturnNull(String id) {
+        ServiceBundle serviceBundle;
+        try {
+            serviceBundle = get(id);
+        } catch (ResourceException | ResourceNotFoundException e) {
+            return null;
+        }
+        return serviceBundle;
+    }
+
+    @Override
+    public List<ServiceBundle> getInactiveResources(String providerId) {
+        FacetFilter ff = new FacetFilter();
+        ff.addFilter("resource_organisation", providerId);
+        ff.addFilter("catalogue_id", catalogueId);
+        ff.addFilter("active", false);
+        ff.setFrom(0);
+        ff.setQuantity(maxQuantity);
+        ff.addOrderBy("name", "asc");
+        return this.getAll(ff, null).getResults();
+    }
+
+    private void createLoggingInfoEntriesForResourceExtraUpdates(ServiceBundle bundle, Authentication auth) {
+        List<LoggingInfo> loggingInfoList = commonMethods.returnLoggingInfoListAndCreateRegistrationInfoIfEmpty(bundle, auth);
+        LoggingInfo loggingInfo = commonMethods.createLoggingInfo(auth, LoggingInfo.Types.UPDATE.getKey(),
+                LoggingInfo.ActionType.UPDATED.getKey());
+        loggingInfoList.add(loggingInfo);
+        bundle.setLoggingInfo(loggingInfoList);
+    }
+
+    private void updateFacetFilterConsideringTheAuthorization(FacetFilter filter, Authentication auth) {
+        // if user is Unauthorized, return active ONLY
+        if (auth == null || !auth.isAuthenticated() || (
+                !securityService.hasRole(auth, "ROLE_PROVIDER") &&
+                !securityService.hasRole(auth, "ROLE_EPOT") &&
+                !securityService.hasRole(auth, "ROLE_ADMIN"))) {
+            filter.addFilter("active", true);
+            filter.addFilter("published", false);
+        }
     }
 }
