@@ -1,32 +1,45 @@
+/*
+ * Copyright 2017-2025 OpenAIRE AMKE & Athena Research and Innovation Center
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *      https://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
 package gr.uoa.di.madgik.resourcecatalogue.manager;
 
-import gr.uoa.di.madgik.resourcecatalogue.config.ServiceConfig;
-import gr.uoa.di.madgik.resourcecatalogue.domain.*;
-import gr.uoa.di.madgik.resourcecatalogue.service.ServiceBundleService;
-import gr.uoa.di.madgik.resourcecatalogue.service.ProviderService;
-import gr.uoa.di.madgik.resourcecatalogue.service.VocabularyService;
-import gr.uoa.di.madgik.resourcecatalogue.service.SecurityService;
 import gr.uoa.di.madgik.registry.exception.ResourceNotFoundException;
 import gr.uoa.di.madgik.registry.service.ServiceException;
+import gr.uoa.di.madgik.resourcecatalogue.config.ServiceConfig;
+import gr.uoa.di.madgik.resourcecatalogue.domain.*;
+import gr.uoa.di.madgik.resourcecatalogue.service.ProviderService;
+import gr.uoa.di.madgik.resourcecatalogue.service.SecurityService;
+import gr.uoa.di.madgik.resourcecatalogue.service.ServiceBundleService;
+import org.jetbrains.annotations.NotNull;
+import org.junit.jupiter.api.Test;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.junit.Test;
-import org.junit.runner.RunWith;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.test.context.ActiveProfiles;
 import org.springframework.test.context.ContextConfiguration;
-import org.springframework.test.context.junit4.SpringJUnit4ClassRunner;
 import org.springframework.test.context.web.WebAppConfiguration;
 
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
 import java.util.ArrayList;
 import java.util.List;
 
-@RunWith(SpringJUnit4ClassRunner.class)
+@SpringBootTest
 @ContextConfiguration(classes = {ServiceConfig.class})
-//@ContextConfiguration(classes = { TestConfig.class })
-//@ContextConfiguration(classes = { MockDatabaseConfiguration.class })
 @ActiveProfiles("test")
 @WebAppConfiguration
 public class ServiceProviderRegistrationIT {
@@ -37,10 +50,7 @@ public class ServiceProviderRegistrationIT {
     ProviderService providerService;
 
     @Autowired
-    ServiceBundleService serviceBundleService;
-
-    @Autowired
-    VocabularyService vocabularyService;
+    ServiceBundleService<ServiceBundle> serviceBundleService;
 
     @Autowired
     SecurityService securityService;
@@ -60,7 +70,7 @@ public class ServiceProviderRegistrationIT {
     //TODO: Refactor IT with new model
 
     @Test
-    public void addUpdateAndDeleteProvider() throws ResourceNotFoundException, MalformedURLException {
+    public void addUpdateAndDeleteProvider() throws MalformedURLException {
         String providerId = "wp6";
         ProviderBundle provider;
         ServiceBundle serviceBundle;
@@ -76,7 +86,7 @@ public class ServiceProviderRegistrationIT {
 
             serviceBundle = new ServiceBundle(createService("WP4_TestService", provider.getProvider()));
 
-            serviceBundle = (ServiceBundle) serviceBundleService.addResource(serviceBundle, securityService.getAdminAccess());
+            serviceBundle = serviceBundleService.addResource(serviceBundle, securityService.getAdminAccess());
 
             assert serviceBundle != null;
 
@@ -92,7 +102,7 @@ public class ServiceProviderRegistrationIT {
             logger.error("ERROR", e);
         } finally {
             provider = providerService.get(providerId, securityService.getAdminAccess());
-            logger.info("Deleting provider with id: {}", provider.getId());
+            logger.info("Deleting provider with id: '{}'", provider.getId());
             providerService.delete(provider);
         }
 
@@ -122,19 +132,7 @@ public class ServiceProviderRegistrationIT {
         mainContact.setLastName("MainSurname");
         mainContact.setPosition("Manager");
 
-        ProviderPublicContact contact1 = new ProviderPublicContact();
-        contact1.setEmail("contact1@gmail.com");
-        contact1.setFirstName("FirstName1");
-        contact1.setLastName("LastName1");
-        contact1.setPhone("0123456789");
-        ProviderPublicContact contact2 = new ProviderPublicContact();
-        contact2.setEmail("contact2@gmail.com");
-        contact2.setFirstName("FirstName1");
-        contact2.setLastName("LastName1");
-        contact2.setPhone("9876543210");
-        List<ProviderPublicContact> publicContacts = new ArrayList<>();
-        publicContacts.add(contact1);
-        publicContacts.add(contact2);
+        List<ProviderPublicContact> publicContacts = getProviderPublicContacts();
 
         List<User> users = new ArrayList<>();
         User user = new User();
@@ -148,9 +146,9 @@ public class ServiceProviderRegistrationIT {
         provider.setId(id);
         provider.setName("WP4_TestProvider");
         provider.setAbbreviation("WP4");
-        provider.setWebsite(new URL("http://wp4.testprovider.com"));
+        provider.setWebsite(URI.create("http://wp4.testprovider.com").toURL());
         provider.setDescription("Jtest for PDT WP4 v2.00 01/10/19");
-        provider.setLogo(new URL("https://wp4.testprovider.logo.com"));
+        provider.setLogo(URI.create("https://wp4.testprovider.logo.com").toURL());
         provider.setStructureTypes(providerTypes);
         provider.setScientificDomains(providerScientificSubdomains);
         provider.setLifeCycleStatus("provider_life_cycle_status-under_construction");
@@ -162,6 +160,23 @@ public class ServiceProviderRegistrationIT {
         return providerService.add(new ProviderBundle(provider), securityService.getAdminAccess());
     }
 
+    private static @NotNull List<ProviderPublicContact> getProviderPublicContacts() {
+        ProviderPublicContact contact1 = new ProviderPublicContact();
+        contact1.setEmail("contact1@gmail.com");
+        contact1.setFirstName("FirstName1");
+        contact1.setLastName("LastName1");
+        contact1.setPhone("0123456789");
+        ProviderPublicContact contact2 = new ProviderPublicContact();
+        contact2.setEmail("contact2@gmail.com");
+        contact2.setFirstName("FirstName1");
+        contact2.setLastName("LastName1");
+        contact2.setPhone("9876543210");
+        List<ProviderPublicContact> publicContacts = new ArrayList<>();
+        publicContacts.add(contact1);
+        publicContacts.add(contact2);
+        return publicContacts;
+    }
+
     private ProviderBundle updateProvider(String id) throws MalformedURLException, ResourceNotFoundException {
         // get provider
         ProviderBundle provider = providerService.get(id);
@@ -169,9 +184,9 @@ public class ServiceProviderRegistrationIT {
         // update provider
         provider.getProvider().setName("WP4_Test UPDATED");
         provider.getProvider().setAbbreviation("WP4UPDATED");
-        provider.getProvider().setWebsite(new URL("http://wp4.test.updated.com"));
+        provider.getProvider().setWebsite(URI.create("http://wp4.test.updated.com").toURL());
         provider.getProvider().setDescription("Jtest for PDT WP4 v2.00 01/10/19 UPDATED");
-        provider.getProvider().setLogo(new URL("https://wp4.testprovider.logo.updated.com"));
+        provider.getProvider().setLogo(URI.create("https://wp4.testprovider.logo.updated.com").toURL());
         provider.getProvider().setLifeCycleStatus("provider_life_cycle_status-being_upgraded");
         provider.getProvider().getLocation().setCountry("EU");
 
@@ -204,6 +219,25 @@ public class ServiceProviderRegistrationIT {
         places.add("GR");
         places.add("FR");
 
+        List<ServicePublicContact> contacts = getServicePublicContacts();
+
+        Service service = new Service();
+        service.setName(serviceName);
+        service.setWebpage(URI.create("https:wp4.testservice.com").toURL());
+        service.setDescription("Jtest for SDT WP4 v2.00 01/10/19");
+        service.setLogo(URI.create("https:wp4.testservice.logo.com").toURL());
+        service.setResourceOrganisation(provider.getId());
+        service.setScientificDomains(scientificSubdomains);
+        service.setCategories(subcategories);
+        service.setTargetUsers(targetUsers);
+        service.setLanguageAvailabilities(languages);
+        service.setGeographicalAvailabilities(places);
+        service.setPublicContacts(contacts);
+
+        return service;
+    }
+
+    private static @NotNull List<ServicePublicContact> getServicePublicContacts() {
         ServicePublicContact contact1 = new ServicePublicContact();
         contact1.setEmail("contact1@gmail.com");
         contact1.setFirstName("FirstName1");
@@ -217,20 +251,6 @@ public class ServiceProviderRegistrationIT {
         List<ServicePublicContact> contacts = new ArrayList<>();
         contacts.add(contact1);
         contacts.add(contact2);
-
-        Service service = new Service();
-        service.setName(serviceName);
-        service.setWebpage(new URL("https:wp4.testservice.com"));
-        service.setDescription("Jtest for SDT WP4 v2.00 01/10/19");
-        service.setLogo(new URL("https:wp4.testservice.logo.com"));
-        service.setResourceOrganisation(provider.getId());
-        service.setScientificDomains(scientificSubdomains);
-        service.setCategories(subcategories);
-        service.setTargetUsers(targetUsers);
-        service.setLanguageAvailabilities(languages);
-        service.setGeographicalAvailabilities(places);
-        service.setPublicContacts(contacts);
-
-        return service;
+        return contacts;
     }
 }
